# AGL_Demo

./: README.md
agl-mirror/: CMakeLists.txt  agl-app@agl-mirror.service  agl-mirror.desktop  oe-logs  oe-workdir
agl-mirror/qml/: Background.qml  BorderColor.qml  ButtonControl.qml  HL_Button.qml  Mirror.qml  qml.qrc
agl-mirror/qml/images/: images.qrc
agl-mirror/source-date-epoch/: __source_date_epoch.txt
agl-mirror/src/: main.cpp
agl-mirror/src/qml/: Background.qml  BorderColor.qml  HL_Button.qml  Mirror.qml  qml.qrc
agl-mirror/src/qml/images/: images.qrc
connman-provision/: my-eth.config  oe-logs  oe-workdir
dashboard/: dashboard.pro  oe-logs  oe-workdir
dashboard/app/: Dashboard.qml  TirePressure.qml  app.pro  dashboard.qrc  main.cpp
dashboard/app/images/: images.qrc
dashboard/app/images/maps/: maps.qrc
dashboard/app/images/meshes/: meshes.qrc  (+45 more)
drivemode/: CMakeLists.txt  agl-app@drivemode.service  drivemode.desktop  oe-logs  oe-workdir
drivemode/qml/: ButtonControl.qml  DriveMode.qml  qml.qrc
drivemode/qml/images/: images.qrc
drivemode/src/: main.cpp
homescreen/: meson.build  oe-logs  oe-workdir
homescreen/homescreen/: meson.build
homescreen/homescreen/proto/: agl_shell.proto
homescreen/homescreen/qml/: AreaMap.qml  Background.qml  BottomBar.qml  ButtonControl.qml  HomeScreen.qml  LeaderCallout.qml  LeftBar.qml  MediaAreaMusic.qml  Mercedes.qml  Mercedes_.qml  Mercedes_Transparent.qml  SpeechChrome.qml  Sport_car_seat.qml  TopBar.qml  background_with_panels.qml  qml.qrc
homescreen/homescreen/qml/images/: images.qrc
homescreen/homescreen/qml/images/maps/: maps.qrc
homescreen/homescreen/qml/images/meshes/: meshes.qrc  object_0.mesh  object_0_mesh.mesh  object_108_mesh.mesh  object_109_mesh.mesh  object_10_mesh.mesh  object_110_mesh.mesh  object_117_mesh.mesh  object_118_mesh.mesh  object_119_mesh.mesh  object_11_mesh.mesh  object_120_mesh.mesh  object_122_mesh.mesh  object_123_mesh.mesh  object_127_mesh.mesh  object_129_mesh.mesh  object_130_mesh.mesh  object_131_mesh.mesh  object_134_mesh.mesh  object_136_mesh.mesh  object_139_mesh.mesh  object_145_mesh.mesh  object_152_mesh.mesh  object_155_mesh.mesh  object_156_mesh.mesh  object_158_mesh.mesh  object_1_mesh.mesh  object_2.mesh  object_22_mesh.mesh  object_23_mesh.mesh  object_24_mesh.mesh  object_28_mesh.mesh  object_29_mesh.mesh  object_3.mesh  object_30_mesh.mesh  object_31_mesh.mesh  object_32_mesh.mesh  object_34_mesh.mesh  object_43_mesh.mesh  object_44_mesh.mesh  (+21 more)
homescreen/homescreen/src/: AglShellGrpcClient.cpp  AglShellGrpcClient.h  MeshLoader.h  SharedImageProvider.h  handlermodel3d.cpp  handlermodel3d.h  homescreenhandler.cpp  homescreenhandler.h  main.cpp  mastervolume.cpp  mastervolume.h  shared_protocol.h
hvac/: BluePanel.qml  ButtonControl.qml  CMakeLists.txt  HL_Button.qml  HVAC.qml  SlideBar.qml  WindFlowShader.qml  WindSlideBar.qml  agl-app@hvac.service  files.tar.xz  hvac.desktop  hvac.qrc  main.cpp  oe-logs  oe-workdir  windflow.frag  windflow.frag.qsb
hvac/images/: images.qrc
hvac/images/meshes/: meshes.qrc
launcher/: oe-logs  oe-workdir
launcher/launcher/qml/: ButtonControl.qml  Launcher.qml  qml.qrc
launcher/launcher/src/: main.cpp
light/: CMakeLists.txt  agl-app@light.service  light.desktop  oe-logs  oe-workdir
light/qml/: ButtonControl.qml  Light.qml  Mercedes_Light.qml  qml.qrc
light/qml/images/: images.qrc
light/qml/images/meshes/: meshes.qrc  object_1.mesh  object_100_mesh.mesh  object_104_mesh.mesh  object_105_mesh.mesh  object_107_mesh.mesh  object_112_mesh.mesh  object_113_mesh.mesh  object_116_mesh.mesh  object_125_mesh.mesh  object_126_mesh.mesh  object_12_mesh.mesh  object_132_mesh.mesh  object_133_mesh.mesh  object_135_mesh.mesh  object_137_mesh.mesh  object_13_mesh.mesh  object_143_mesh.mesh  object_144_mesh.mesh  object_146_mesh.mesh  object_147_mesh.mesh  object_148_mesh.mesh  object_149_mesh.mesh  object_150_mesh.mesh  object_151_mesh.mesh  object_153_mesh.mesh  object_154_mesh.mesh  object_162_mesh.mesh  object_163_mesh.mesh  object_20_mesh.mesh  object_2_mesh.mesh  object_35_mesh.mesh  object_37_mesh.mesh  object_38_mesh.mesh  object_39_mesh.mesh  object_3_mesh.mesh  object_4.mesh  object_42_mesh.mesh  object_47_mesh.mesh  object_48_mesh.mesh  (+20 more)
light/src/: SharedImageProvider.h  main.cpp
mediaplayer/: CMakeLists.txt  agl-app@mediaplayer.service  mediaplayer.desktop  oe-logs  oe-workdir
mediaplayer/qml/: ButtonControl.qml  MediaPlayer.qml  qml.qrc
mediaplayer/qml/images/: images.qrc
mediaplayer/src/: audiocontroller.cpp  audiocontroller.h  main.cpp  src.qrc
navigation/: CMakeLists.txt  agl-app@navigation.service  navigation.desktop  oe-logs  oe-workdir
navigation/qml/: ButtonControl.qml  Navigation.qml  RouteInfomation.qml  RouteListDelegate.qml  RouteListHeader.qml  TextEffect.qml  helper.js  qml.qrc
navigation/qml/images/: images.qrc
navigation/src/: main.cpp  searchcontroller.cpp  searchcontroller.h
phone/: ButtonControl.qml  CMakeLists.txt  Phone.qml  agl-app@phone.service  main.cpp  oe-logs  oe-workdir  phone.desktop  qml.qrc  telephony.cpp  telephony.h
phone/images/: images.qrc
plymouth/: meson.build  meson_options.txt  oe-logs  oe-workdir
plymouth/src/client/: meson.build
plymouth/src/libply/: meson.build
plymouth/src/libply-splash-core/: meson.build
plymouth/systemd-units/: meson.build
plymouth/themes/: meson.build
plymouth/themes/spinfinity/: meson.build
server/: agl-app@server.service  oe-logs  oe-workdir  server.desktop  ui_state.proto
settings/: CMakeLists.txt  agl-app@settings.service  oe-logs  oe-workdir  settings.desktop
settings/qml/: ButtonControl.qml  Device.qml  HL_Button.qml  Settings.qml  SwitchButton.qml  qml.qrc
settings/qml/images/: images.qrc
settings/src/: bluetoothmanager.cpp  bluetoothmanager.h  bluetoothworker.cpp  bluetoothworker.h  main.cpp  src.qrc
steering/: Background.qml  BorderColor.qml  ButtonControl.qml  HL_Button.qml  Steering.qml  agl-app@steering.service  main.cpp  oe-logs  oe-workdir  qml.qrc  steering.desktop
steering/images/: images.qrc
(+1 files in other folders)
