if get_option('spinfinity-theme')
    subdir('spinfinity')
endif
if get_option('fade-in-theme')
    subdir('fade-in')
endif
if get_option('text-theme')
subdir('text')
endif
if get_option('details-theme')
    subdir('details')
endif
if get_option('solar-theme')
    subdir('solar')
endif
if get_option('glow-theme')
    subdir('glow')
endif
if get_option('script-theme')
    subdir('script')
endif
if get_option('spinner-theme')
    subdir('spinner')
endif
if get_option('tribar-theme')
    subdir('tribar')
endif
if get_option('bgrt-theme')
    subdir('bgrt')
endif
